--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -7,6 +7,7 @@ AppBundle\Entity\User:
     password: cyberadmin
     esAdmin: true
     credits: 99999
+    reputation: 99999
 
   jugador_{1..4}:
     #signDate: '<dateTimeBetween("-3 months", "now")> '
@@ -16,6 +17,7 @@ AppBundle\Entity\User:
     password: jugador
     esAdmin: false
     credits: '<numberBetween(0,9999)>'
+    reuptation: 0
 
 
 
