--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -17,13 +17,31 @@ AppBundle\Entity\User:
     password: jugador
     esAdmin: false
     credits: '<numberBetween(0,9999)>'
-    reuptation: 0
+    reputation: 0
 
 
 
 AppBundle\Entity\Card:
-  carta_{1_20}:
-    typeCard: '<numberBetween(1,8)>'
+  carta_{1..40}:
+    typeCard: '<numberBetween(1,4)>'
     cardOwner: '@jugador_<numberBetween(1,4)>'
 
 
+AppBundle\Entity\Deck:
+  baraja_{1..4}:
+    deckName: '<es_ES:word()>'
+    deckOwner: '@jugador_<current()>'
+    cardsContained: '2x @carta_*'
+
+AppBundle\Entity\TypeCard:
+  tipoCarta_{1..4}:
+    name: 'nombreCarta_<current()>'
+    imageRoute: 'fotoCarta_<current()>.jpg'
+    power: '<numberBetween(1,8)>'
+    damage: '<numberBetween(1,5)>'
+
+AppBundle\Entity\Battle:
+  partida_{1..16}:
+    battleDate: <dateTime('now', 'cet')>
+    damagePlayerOne: '<numberBetween(1,10)>'
+    damagePlayerTwo: '<numberBetween(1,10)>'
