[FUNCIONANDO] Activada la seguridad: Solo se puede usar la app como invitado

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,10 +9,8 @@ security:
             class: AppBundle\Entity\Usuario
             property: login
 
-
-
-   encoders:
-     AppBundle\Entity\Usuario:
+    encoders:
+        AppBundle\Entity\Usuario: plaintext
 
     role_hierarchy:
         ROLE_ADMIN: ['ROLE_PLAYER', 'ROLE_EDITOR']
@@ -29,11 +27,12 @@ security:
 
         main:
             logout_on_user_change: true
-            #anonymous: ~
+            anonymous: ~
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            http_basic: ~
+            #http_basic: ~
 
             # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+            form_login:
+                login_path:
