--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,11 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "nelmio/alice": "^3.5"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "nelmio/alice": "^3.5",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
