--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,6 +60,11 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
 
+doctrine_migrations:
+    dir_name: '%kernel.project_dir%/src/AppBundle/Migrations'
+    namespace: 'AppBundle\Migrations'
+
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: '%mailer_transport%'
