--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,6 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
@@ -32,7 +30,10 @@
         "symfony/symfony": "3.4.*",
         "twig/twig": "^1.0||^2.0",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
-        "nelmio/alice": "^3.5"
+        "nelmio/alice": "^3.5",
+        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-migrations-bundle": "^1.3",
+        "doctrine/orm": "^2.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
